changes for viewing doctor profile

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: >
   book-a-doc
@@ -33,9 +33,13 @@ Resources:
       Runtime: python3.8
       Policies:
         - DynamoDBCrudPolicy:
-            TableName:
-              !Ref UserTable
+            TableName: !Ref UserTable
       Events:
+        TestUser:
+          Type: Api
+          Properties:
+            Path: /
+            Method: get
         ListUsers:
           Type: Api
           Properties:
