--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.7",
     "firebase": "^8.3.1",
     "ionicons": "^5.4.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-rating": "^2.0.5",
