--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.32.1",
+    "@ionic-native/zoom": "^5.32.1",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -16,6 +18,8 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "@zoomus/websdk": "^1.9.1",
+    "cordova.plugin.zoom": "^4.6.2166-6.603",
     "firebase": "^8.3.1",
     "ionicons": "^5.4.0",
     "moment": "^2.29.1",
