--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
     "react-rating": "^2.0.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
