--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "@zoomus/websdk": "^1.9.1",
+    "axios": "^0.21.1",
     "cordova-plugin-stripe": "^1.5.3",
     "cordova.plugin.zoom": "^4.6.2166-6.603",
+    "emailjs-com": "^2.6.4",
     "firebase": "^8.3.1",
     "history": "^4.10.1",
     "ionicons": "^5.4.0",
