--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,15 @@
     "@zoomus/websdk": "^1.9.1",
     "cordova-plugin-stripe": "^1.5.3",
     "cordova.plugin.zoom": "^4.6.2166-6.603",
+    "emailjs": "^3.4.0",
+    "emailjs-com": "^2.6.4",
     "firebase": "^8.3.1",
     "history": "^4.10.1",
     "ionicons": "^5.4.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-rating": "^2.0.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
