--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,8 +33,9 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
     "react-google-charts": "^3.0.15",
+    "react-helmet": "^6.1.0",
+    "react-paginate": "^7.1.2",
     "react-rating": "^2.0.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
