--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@ionic-native/zoom": "^5.32.1",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
+    "@material-ui/core": "^4.11.4",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
     "@testing-library/jest-dom": "^5.11.9",
@@ -37,6 +38,7 @@
     "react-helmet": "^6.1.0",
     "react-paginate": "^7.1.2",
     "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
