--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,12 +30,17 @@
     "emailjs-com": "^2.6.4",
     "firebase": "^8.3.1",
     "history": "^4.10.1",
+    "i18next": "^20.2.2",
+    "i18next-browser-languagedetector": "^6.1.0",
+    "i18next-http-backend": "^1.2.2",
+    "i18next-xhr-backend": "^3.2.2",
     "ionicons": "^5.4.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.8.15",
     "react-paginate": "^7.1.2",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
